# dotfiles

./: .gitmodules  .sops.yaml  Justfile  README.md  alacritty.yml  bootstrap.sh  configuration.nix  darwin-configuration.nix  flake.nix  fzf.zsh  home.nix  pyproject.toml  secrets.yaml  taskrc  viminfo  zshrc  zshrc.wslv2
conductor/: product-guidelines.md  product.md  tech-stack.md
git/: default.nix  git-identity
linux/: aliases  bootstrap.sh  centos.bootstrap.sh  debian.bootstrap.sh  fedora.bootstrap.sh  zshrc
macos/: aliases  aliases.zsh  functions.zsh  macos.zshrc  zshrc.zsh
modules/: alacritty.nix  aliases.nix  git.nix  homebrew.nix  navi.nix  nix-index.nix  starship.nix  tmux.local.nix  tmux.nix  zsh.nix
modules/system/: homebrew.nix  macos.nix
modules/user/: alacritty.nix  alacritty.yml  aliases.nix  git.nix  navi.nix  neovim.nix  nixvim.nix  packages.nix  programs.nix  secrets.nix  starship.nix  stylix.nix  tmux.conf  tmux.local.nix  tmux.nix  zsh.nix
modules/user/scripts/: git-identity
overlays/: default.nix
starship/: starship.toml
task/: asanawarrior.db  backlog.data  completed.data  pending.data  undo.data
task.unused/: backlog.data  pending.data  undo.data
zsh/: aliases  aliases.zsh  functions  functions.zsh
