[tool.poetry]
name = "sdrush-dotfiles"
version = "0.1.0"
description = "Python environment for sdrush's dotfiles"
authors = ["sdrush"]

[tool.poetry.dependencies]
python = "^3.12"
numpy = "*"
pyopenssl = "*"
pylint = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
